display result on screen (ugly)
still need to fix UI layout

--- a/style.css
+++ b/style.css
@@ -7,3 +7,20 @@ body {
     height: 100vh; 
     display: block; 
 }
+
+.cast-btn {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    z-index: 1000;
+    padding: 10px 20px;
+    font-size: 16px;
+}
+
+.display-msg {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 900;
+    font-size: medium;
+}
